--- a/app/views/Templates/global_header.html
+++ b/app/views/Templates/global_header.html
@@ -9,6 +9,7 @@
 
     <!-- CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/tripoliCSSReset.css" rel="stylesheet">
     <style type="text/css">
 
       /* Sticky footer styles
